Fixed font on Safari, added correct favicon

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 body {
-  @apply text-[#231f20];
   font-family: "ff-good-web-pro-extra-conden", sans-serif;
+  @apply text-[#231f20] italic;
 }
 
 .countdown-tile {
